--- a/IShop/IShop/Views/Account/Login.cshtml
+++ b/IShop/IShop/Views/Account/Login.cshtml
@@ -1,21 +1,21 @@
-﻿@model UTILISATEUR
+﻿@model IShop.Models.AccountModels
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Connexion";
 }
 
 <h2>Login</h2>
 @using (Html.BeginForm("Connexion", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
-    <div class="form-group">
-        @Html.LabelFor(m => m.EMAIL_UTILISATEUR, new { @class = "col-md-2 control-label" })
+<div class="form-group">
+        @Html.LabelFor(model => model.utilisateur.EMAIL_UTILISATEUR, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.EMAIL_UTILISATEUR, new { @class = "form-control" })
+            @Html.TextBoxFor(model => model.utilisateur.EMAIL_UTILISATEUR, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.MDP_UTILISATEUR, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(model => model.utilisateur.MDP_UTILISATEUR, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.MDP_UTILISATEUR, new { @class = "form-control" })
+            @Html.PasswordFor(model => model.utilisateur.MDP_UTILISATEUR, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
